# tools_manifests

./: BUILD.bazel  LICENSE.md  MODULE.bazel  go.mod  go.sum
conftest/: BUILD.bazel  defs.bzl  extensions.bzl  providers.bzl  repo.bzl  toolchain.bzl
conftest/private/: resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
crdschema/: BUILD.bazel  README.md  def.bzl  providers.bzl  toolchain.bzl
crdschema/cmd/schema/: BUILD.bazel  main.go
docsonnet/: BUILD.bazel  defs.bzl  providers.bzl  toolchain.bzl  tools.go
k8sgen/: BUILD.bazel  defs.bzl  providers.bzl  toolchain.bzl  tools.go
k8sgen/patches/com_github_jsonnet_libs_k8s/: 0001-patch-remove-chdir.patch  0002-update-doc-util-file-path.patch  0003-remove-recursive-mixin.patch  0004-disable-printing.patch
opa/: BUILD.bazel  BUILD.bazel.tpl  defs.bzl  extensions.bzl  providers.bzl  repo.bzl  rules.bzl  toolchain.bzl
opa/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
tools/: gopackagesdriver.sh
