module(
    name = "tools_manifests",
    compatibility_level = 1,
    repo_name = "ohno_cloud_tools_manifests",
)

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "rules_jsonnet", version = "0.6.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "gazelle", version = "0.44.0")

#==============================================================================
# Go Lang dependencies
#==============================================================================
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_alecthomas_kong",
    "com_github_jsonnet_libs_docsonnet",
    "com_github_ohno_cloud_k8s_gen_libsonnet",
    "in_gopkg_yaml_v3",
    "io_k8s_sigs_kubebuilder_v4",
    "org_golang_x_sync",
)
