load("//conftest/private:resolved_toolchain.bzl", "resolved_toolchain")

exports_files(glob(include = [
    "*.bzl",
]))

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

resolved_toolchain(
    name = "resolved_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
