load(":toolchain.bzl", "docsonnet_toolchain")

# gazelle:exclude tools.go
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

alias(
    name = "docsonnet",
    actual = "@com_github_jsonnet_libs_docsonnet//:docsonnet",
    visibility = ["//visibility:public"],
)

docsonnet_toolchain(
    name = "go_toolchain",
    cli = ":docsonnet",
    visibility = ["//visibility:public"],
)
