load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "schema_lib",
    srcs = ["main.go"],
    importpath = "github.com/ohno-cloud/tools_manifests/crdschema/cmd/schema",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_alecthomas_kong//:kong",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "schema",
    embed = [":schema_lib"],
    visibility = ["//visibility:public"],
)
